--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 
 <script>
 const firebaseConfig = {
-    apiKey: "AIzaSyBEgn1TkHTX1Tq731xwKMwCTOBahCmJylE",
-    authDomain: "voucherstore-32495.firebaseapp.com",
-    projectId: "voucherstore-32495",
-    storageBucket: "voucherstore-32495.firebasestorage.app",
-    messagingSenderId: "484369779532",
-    appId: "1:484369779532:web:df1dd7ecee7171bd29dde9"
+    apiKey: "AIzaSyAIwwONMemP4WwFE2VZV0lqQhjV_c6pRXM",
+    authDomain: "ryujinstore.firebaseapp.com",
+    projectId: "ryujinstore",
+    storageBucket: "ryujinstore.firebasestorage.app",
+    messagingSenderId: "411976248798",
+    appId: "1:411976248798:web:e7dc194853cefc7e2f814f"
   };
 firebase.initializeApp(firebaseConfig);
 const db = firebase.database();
