--- a/index.html
+++ b/index.html
@@ -4,16 +4,99 @@
   <title>Voucher Store</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    body { font-family: 'Segoe UI', sans-serif; background: #f0f4f8; padding: 20px; }
-    .card { background: white; padding: 20px; border-radius: 15px; max-width: 420px; margin: 20px auto; text-align:center; box-shadow:0 5px 15px rgba(0,0,0,0.1);}
-    button { padding: 10px 20px; margin-top: 10px; border-radius:10px; border:none; background:#007bff; color:white; cursor:pointer;}
-    button:hover { background:#0056b3;}
-    .secondary-btn { background:#ff4d6d;}
-    .secondary-btn:hover { background:#e63950;}
-    input { width: 95%; padding: 8px; margin:5px 0; border-radius: 5px; border: 1px solid #ccc;}
-    hr { margin:15px 0; }
-    .order-box { border:1px solid #ddd; padding:10px; margin:10px 0; border-radius:10px; }
-  </style>
+  body {
+    font-family: 'Segoe UI', sans-serif;
+    background: radial-gradient(circle at top, #1a002e, #000);
+    padding: 20px;
+    color: white;
+  }
+
+  .card {
+    background: rgba(20, 0, 40, 0.85);
+    padding: 25px;
+    border-radius: 20px;
+    max-width: 420px;
+    margin: 20px auto;
+    text-align: center;
+    box-shadow: 0 0 25px #ff00ff, 0 0 50px #00ffff;
+    border: 2px solid #ff00ff;
+  }
+
+  h2 {
+    color: #ff00ff;
+    text-shadow: 0 0 10px #ff00ff, 0 0 20px #00ffff;
+    font-size: 24px;
+  }
+
+  h3 {
+    color: #00ffff;
+    text-shadow: 0 0 8px #00ffff;
+  }
+
+  button {
+    padding: 16px 24px;
+    margin-top: 12px;
+    border-radius: 14px;
+    border: none;
+    background: linear-gradient(45deg, #ff00ff, #00ffff);
+    color: white;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 18px;
+    box-shadow: 0 0 15px #ff00ff, 0 0 25px #00ffff;
+    transition: 0.3s;
+    width: 100%; /* full-width for mobile taps */
+    max-width: 320px;
+  }
+
+  button:hover {
+    transform: scale(1.05);
+    box-shadow: 0 0 25px #00ffff, 0 0 35px #ff00ff;
+  }
+
+  .secondary-btn {
+    background: linear-gradient(45deg, #ff0080, #ff4dff);
+  }
+
+  input {
+    width: 95%;
+    padding: 14px;
+    margin: 10px 0;
+    border-radius: 12px;
+    border: 1px solid #00ffff;
+    background: #140028;
+    color: white;
+    outline: none;
+    box-shadow: 0 0 12px #00ffff;
+    font-size: 16px;
+  }
+
+  input::placeholder {
+    color: #bbb;
+  }
+
+  hr {
+    margin: 20px 0;
+    border: 1px solid #ff00ff;
+    box-shadow: 0 0 10px #ff00ff;
+  }
+
+  .order-box {
+    border: 1px solid #00ffff;
+    padding: 15px;
+    margin: 12px 0;
+    border-radius: 15px;
+    box-shadow: 0 0 12px #00ffff;
+    font-size: 16px;
+  }
+
+  /* Optional: make images responsive */
+  img {
+    max-width: 100%;
+    height: auto;
+  }
+</style>
+
 </head>
 <body>
 
@@ -282,3 +365,4 @@ showHomepage();
 </script>
 </body>
 </html>
+
